fixed overflow css issue

--- a/portfolio/src/pages/Home/home.css
+++ b/portfolio/src/pages/Home/home.css
@@ -13,3 +13,7 @@
     margin-right:25px;
     margin-left:25px;
 } 
+
+.bioCard, .contactCard, .techCard, .languageCard{
+    overflow:auto;
+}
